Integration branch and bump powsybl-core to 7.3.0-RC2 (#1392)
* Bump powsybl-core version to 7.3.0-SNAPSHOT

* Bump IIDM version to 1.17 (#1391)

* Add vertices sorting in LfZeroImpedanceNetwork to have deterministic results (#1407)

* Adapt to core 3928

* Use permanent limit name

* Fix unit test

* Replace graphviz-builder dependency with JGraphT (#1431)

* Bump powsybl-core version to 7.3.0-RC2 (#1436)

---------

Signed-off-by: Sylvestre Prabakaran <sylvestre.prabakaran@rte-france.com>
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>
Co-authored-by: Nicolas Rol <nicolas.rol@rte-france.com>
Co-authored-by: Olivier Perrin <olivier.perrin@rte-france.com>